--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
+    "bunyan": "^1.8.15",
+    "bunyan-format": "^0.2.1",
     "pcap": "^3.1.0",
     "redis-proto": "^2.1.0"
   }
